update modal content

--- a/index.html
+++ b/index.html
@@ -106,8 +106,9 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p>我是一位熱愛前端開發的工程師，擁有豐富的前端開發經驗，熟悉 HTML、CSS、JavaScript、Vue.js 等技術，並且具備 UI/UX
-                            設計能力。我喜歡學習新技術，並且樂於與團隊合作，共同完成專案。</p>
+                        <p> 我希望能夠持續運用這些技能，助力醫療相關專案的創新與發展。這些經歷不僅增強了我在軟體開發上的實力，也讓我更加深刻地體會到數位轉型對醫療服務的價值與影響。
+                            同時，在未來的職涯規劃中，我期望進一步學習並應用人工智慧技術，探索如何透過機器學習與數據分析，優化醫療作業效率與患者照護質量，為智慧醫療的發展開創更多可能性。 
+                            通過軟體設計與技術實踐，我希望能實現以人為本的智慧醫療解決方案，縮短病患與醫療服務之間的距離，並為打造更高效、更人性化的醫療環境貢獻自己的力量。</p>
                     </div>
                 </div>
             </div>
@@ -121,8 +122,36 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p>我是一位熱愛前端開發的工程師，擁有豐富的前端開發經驗，熟悉 HTML、CSS、JavaScript、Vue.js 等技術，並且具備 UI/UX
-                            設計能力。我喜歡學習新技術，並且樂於與團隊合作，共同完成專案。</p>
+                        <p>1. 跨領域專業背景
+                            <ul>
+                                <li> 對醫療產業的運作模式有深入的了解，熟悉醫療環境、具備醫療流程知識，讓我對需求有更好的感知。</li>
+                                <li>熟悉醫療專業術語，能有效與醫療專業人員溝通，能成為醫療與技術之間的橋樑。</li>
+                            </ul>
+                        </p>
+
+                        <p>2. 系統化的軟體開發能力與實踐經驗
+                            <ul>
+                                <li>熟悉軟體開發生命週期（SDLC），能夠全面參與專案的各個階段，並落實每個階段的關鍵步驟。</li>
+                                <li>具備 Vue、Bootstrap、RestfulAPI 及 UI (Figma) 設計等完整開發技術，能夠獨立完成開發與維護。</li>
+                            </ul>
+                        </p>
+                        
+                        <p>3. 強烈的學習熱情與適應力
+                            <ul>
+                                <li>專注軟體開發於人工智慧領域應用的熱忱。</li>
+                                <li>熱愛學習新領域的能力。</li>
+                            </ul>
+                        </p>
+                        <p>4. 專案管理與問題解決能力
+                            <ul>
+                                <li>主管職經驗： 負責團隊協調與目標設定，帶領團隊提升效率與執行力。</li>
+                                <li>學校專案經驗： 擔任組長，帶領團隊完成專案，並獲得第一名的佳績。</li>
+                            </ul>
+                        </p>
+
+                        <strong>我相信，我的跨領域背景能為中山醫 - 人工智慧中心的發展帶來獨特的價值與貢獻。</strong>
+                        <p>我對人工智慧應用充滿熱忱，若中心有其他適合我的職位，也非常期待能有機會進一步交流或探討，探索更多合作的可能性。</p>
+ 
                     </div>
                 </div>
             </div>
