調整縮排格式

--- a/index.html
+++ b/index.html
@@ -81,16 +81,19 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p> 我是一位從醫療領域轉職至資訊工程的開發者，擁有逢甲大學資訊工程學士後學位（2024-2025）以及國立臺北護理健康大學護理系學士學位（2010-2014）。
+                        <p class="indented-text">
+                            我是一位從醫療領域轉職至資訊工程的開發者，擁有逢甲大學資訊工程學士後學位（2024-2025）以及國立臺北護理健康大學護理系學士學位（2010-2014）。
                             我的職業生涯始於醫療領域，曾在衛生福利部雙和醫院擔任神經內科病房護理師，並在中山醫學大學附設醫院兒童部擔任研究助理。這些經驗培養了我細心、耐心以及解決問題的能力，
                             同時也讓我意識到科技對於提升醫療服務的重要性。
                         </p>
-                        <p> 在過去幾年中，我對促進醫療服務的數位轉型產生了濃厚的興趣。這種興趣驅使我進一步學習資訊工程，系統式掌握軟體開發生命週期（SDLC），從瀑布模型到敏捷模型，深入理解它們的流程與應用場景。在實際專案中，我參與了開發的各個階段，學習並落實每個階段的關鍵步驟，包括需求分析、設計、實作、測試與部署。在開發過程中，我全面學習了前端與後端技術，並掌握
+                        <p class="indented-text">
+                            在過去幾年中，我對促進醫療服務的數位轉型產生了濃厚的興趣。這種興趣驅使我進一步學習資訊工程，系統式掌握軟體開發生命週期（SDLC），從瀑布模型到敏捷模型，深入理解它們的流程與應用場景。在實際專案中，我參與了開發的各個階段，學習並落實每個階段的關鍵步驟，包括需求分析、設計、實作、測試與部署。在開發過程中，我全面學習了前端與後端技術，並掌握
                             Vue.js 和 SpringBoot 等開發工具，資料庫 (MariaDB)
                             設計與管理能力，以及單元測試（JUnit）、整合測試及前端的功能測試，能有效提升系統的穩定性與可靠性。並使用 Git 進行版本控制，確保團隊協作的效率與可靠性。
                         </p>
 
-                        <p> 除了程式開發技能，我也積極學習 UI/UX 設計，深刻理解使用者體驗在軟體開發中的重要性。為了提升這方面的能力，我在學程之外自學了 Figma、Whimsical
+                        <p class="indented-text"> 除了程式開發技能，我也積極學習 UI/UX 設計，深刻理解使用者體驗在軟體開發中的重要性。為了提升這方面的能力，我在學程之外自學了
+                            Figma、Whimsical
                             等設計工具，並應用於專案中進行介面設計與使用者流程規劃。力求讓產品在視覺和使用上直觀，為使用者提供高品質的操作體驗。
                         </p>
                     </div>
@@ -106,9 +109,15 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <p> 我希望能夠持續運用這些技能，助力醫療相關專案的創新與發展。這些經歷不僅增強了我在軟體開發上的實力，也讓我更加深刻地體會到數位轉型對醫療服務的價值與影響。
-                            同時，在未來的職涯規劃中，我期望進一步學習並應用人工智慧技術，探索如何透過機器學習與數據分析，優化醫療作業效率與患者照護質量，為智慧醫療的發展開創更多可能性。 
-                            通過軟體設計與技術實踐，我希望能實現以人為本的智慧醫療解決方案，縮短病患與醫療服務之間的距離，並為打造更高效、更人性化的醫療環境貢獻自己的力量。</p>
+                        <p class="indented-text">
+                            我希望能夠持續運用這些技能，助力醫療相關專案的創新與發展。這些經歷不僅增強了我在軟體開發上的實力，也讓我更加深刻地體會到數位轉型對醫療服務的價值與影響。
+                        </p>
+                        <p class="indented-text">
+                            同時，在未來的職涯規劃中，我期望進一步學習並應用人工智慧技術，探索如何透過機器學習與數據分析，優化醫療作業效率與患者照護質量，為智慧醫療的發展開創更多可能性。
+                        </p>
+                        <p class="indented-text">
+                            通過軟體設計與技術實踐，我希望能實現以人為本的智慧醫療解決方案，縮短病患與醫療服務之間的距離，並為打造更高效、更人性化的醫療環境貢獻自己的力量。
+                        </p>
                     </div>
                 </div>
             </div>
@@ -123,35 +132,35 @@
                     </div>
                     <div class="modal-body">
                         <p>1. 跨領域專業背景
-                            <ul>
-                                <li> 對醫療產業的運作模式有深入的了解，熟悉醫療環境、具備醫療流程知識，讓我對需求有更好的感知。</li>
-                                <li>熟悉醫療專業術語，能有效與醫療專業人員溝通，能成為醫療與技術之間的橋樑。</li>
-                            </ul>
+                        <ul>
+                            <li> 對醫療產業的運作模式有深入的了解，熟悉醫療環境、具備醫療流程知識，讓我對需求有更好的感知。</li>
+                            <li>熟悉醫療專業術語，能有效與醫療專業人員溝通，能成為醫療與技術之間的橋樑。</li>
+                        </ul>
                         </p>
 
                         <p>2. 系統化的軟體開發能力與實踐經驗
-                            <ul>
-                                <li>熟悉軟體開發生命週期（SDLC），能夠全面參與專案的各個階段，並落實每個階段的關鍵步驟。</li>
-                                <li>具備 Vue、Bootstrap、RestfulAPI 及 UI (Figma) 設計等完整開發技術，能夠獨立完成開發與維護。</li>
-                            </ul>
-                        </p>
-                        
-                        <p>3. 強烈的學習熱情與適應力
-                            <ul>
-                                <li>專注軟體開發於人工智慧領域應用的熱忱。</li>
-                                <li>熱愛學習新領域的能力。</li>
-                            </ul>
-                        </p>
-                        <p>4. 專案管理與問題解決能力
-                            <ul>
-                                <li>主管職經驗： 負責團隊協調與目標設定，帶領團隊提升效率與執行力。</li>
-                                <li>學校專案經驗： 擔任組長，帶領團隊完成專案，並獲得第一名的佳績。</li>
-                            </ul>
+                        <ul>
+                            <li>熟悉軟體開發生命週期（SDLC），能夠全面參與專案的各個階段，並落實每個階段的關鍵步驟。</li>
+                            <li>具備 Vue、Bootstrap、RestfulAPI 及 UI (Figma) 設計等完整開發技術，能夠獨立完成開發與維護。</li>
+                        </ul>
                         </p>
 
-                        <strong>我相信，我的跨領域背景能為中山醫 - 人工智慧中心的發展帶來獨特的價值與貢獻。</strong>
-                        <p>我對人工智慧應用充滿熱忱，若中心有其他適合我的職位，也非常期待能有機會進一步交流或探討，探索更多合作的可能性。</p>
- 
+                        <p>3. 強烈的學習熱情與適應力
+                        <ul>
+                            <li>專注軟體開發於人工智慧領域應用的熱忱。</li>
+                            <li>熱愛學習新領域的能力。</li>
+                        </ul>
+                        </p>
+                        <p>4. 專案管理與問題解決能力
+                        <ul>
+                            <li>主管職經驗： 負責團隊協調與目標設定，帶領團隊提升效率與執行力。</li>
+                            <li>學校專案經驗： 擔任組長，帶領團隊完成專案，並獲得第一名的佳績。</li>
+                        </ul>
+                        </p>
+
+                        <strong>我相信，我能為貴中心的發展帶來獨特的價值與貢獻。</strong>
+                        <p>我對人工智慧應用充滿熱忱，若貴中心有其他適合我的職位，也非常期待能有機會進一步交流或探討，探索更多合作的可能性。</p>
+
                     </div>
                 </div>
             </div>
