--- a/index.html
+++ b/index.html
@@ -40,12 +40,16 @@
 
     <main>
         <section class="resume-container">
-            <div class="left-column left-column-pro-img">
-                <div class="profile-img-container">
-                    <img src="img/S0.jpg" alt="陳敬家個人照片" class="profile-img" loading="lazy">
-                </div>
 
+            <div class="left-column-center">
+                <div class="left-column left-column-pro-img">
+                    <div class="profile-img-container">
+                        <img src="img/S0.jpg" alt="陳敬家個人照片" class="profile-img" loading="lazy">
+                    </div>
+    
+                </div>
             </div>
+
             <div class="right-column right-column-name">
                 <div class="header">
                     <div class="header-text">
