--- a/index.html
+++ b/index.html
@@ -39,17 +39,13 @@
     </div>
 
     <main>
-        <section class="resume-container">
-
-            <div class="left-column-center">
+        <section class="resume-container left-column-center">
                 <div class="left-column left-column-pro-img">
                     <div class="profile-img-container">
                         <img src="img/S0.jpg" alt="陳敬家個人照片" class="profile-img" loading="lazy">
                     </div>
     
                 </div>
-            </div>
-
             <div class="right-column right-column-name">
                 <div class="header">
                     <div class="header-text">
