--- a/index.html
+++ b/index.html
@@ -289,7 +289,9 @@
                     <div class="portfolio">
                         <div class="portfolio-item portfolio-item-carousel-img">
                             <div id="carouselExampleDark" class="carousel carousel-dark slide">
-                                <div class="carousel-indicators">
+
+                                <!-- 控制作品按鈕 -->
+                                <!-- <div class="carousel-indicators">
                                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0"
                                         class="active" aria-current="true" aria-label="Slide 1"></button>
                                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
@@ -298,7 +300,8 @@
                                         aria-label="Slide 3"></button>
                                     <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" 
                                     aria-label="Slide 4"></button>
-                                </div>
+                                </div> -->
+
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
                                         <img src="banner/1.svg" class="d-block w-100" alt="作品1">
@@ -334,7 +337,9 @@
                             </div>
                         </div>
                     </div>
+
                 </section>
+
             </div>
         </section>
     </main>
