--- a/index.html
+++ b/index.html
@@ -304,7 +304,10 @@
 
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <img src="banner/1.svg" class="d-block w-100" alt="作品1">
+
+                                        <a href="https://d1204480.github.io/sport_reservation_frontend/" target="_blank">
+                                            <img src="banner/1.svg" class="d-block w-100" alt="作品1">
+                                        </a>
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
