--- a/index.html
+++ b/index.html
@@ -304,15 +304,16 @@
 
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-bs-interval="10000">
-
                                         <a href="https://d1204480.github.io/sport_reservation_frontend/" target="_blank">
-                                            <img src="banner/1.svg" class="d-block w-100" alt="作品1">
+                                            <img src="banner/1.svg" class="d-block w-100" alt="運動中心預約網站">
                                         </a>
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <img src="banner/2.svg" class="d-block w-100" alt="作品2">
+                                        <a href="https://d1204416.github.io/RentPlace_Vue_User/" target="_blank">
+                                            <img src="banner/2.svg" class="d-block w-100" alt="台中市民卡2.0">
+                                        </a>
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
