--- a/index.html
+++ b/index.html
@@ -319,7 +319,9 @@
                                         </div>
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="banner/3.svg" class="d-block w-100" alt="作品3">
+                                        <a href="https://d1204416.github.io/FindLostPet/" target="_blank">
+                                            <img src="banner/3.svg" class="d-block w-100" alt="作品3">
+                                        </a>
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
