--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                         </p>
 
                         <p class="indented-text"> 除了程式開發技能，我也積極學習 UI/UX 設計，深刻理解使用者體驗在軟體開發中的重要性。為了提升這方面的能力，我在學程之外自學了
-                            Figma、Whimsical
-                            等設計工具，並應用於專案中進行介面設計與使用者流程規劃。力求讓產品在視覺和使用上直觀，為使用者提供高品質的操作體驗。
+                            Figma、Whimsical等設計工具，並應用於專案中進行介面設計與使用者流程規劃。我的師長曾評價：「這個畫面設計，是專業等級。」、「畫面舒服有業界水準。」
+                            ，這讓我在團隊中成為值得信賴的夥伴。力求讓產品在視覺和使用上直觀，為使用者提供高品質的操作體驗。
                         </p>
                     </div>
                 </div>
