--- a/index.html
+++ b/index.html
@@ -110,13 +110,16 @@
                     </div>
                     <div class="modal-body">
                         <p class="indented-text">
-                            我希望能夠持續運用這些技能，助力醫療相關專案的創新與發展。這些經歷不僅增強了我在軟體開發上的實力，也讓我更加深刻地體會到數位轉型對醫療服務的價值與影響。
+                            我希望運用自身的前端開發能力，助力醫療相關專案的創新與發展。這些經歷不僅增強了我在軟體開發上的實力，
+                            也讓我更加深刻地體會到數位轉型對醫療服務的價值與影響。
                         </p>
                         <p class="indented-text">
-                            同時，在未來的職涯規劃中，我期望進一步學習並應用人工智慧技術，探索如何透過機器學習與數據分析，優化醫療作業效率與患者照護質量，為智慧醫療的發展開創更多可能性。
+                            同時，我渴望透過技術驅動創新，並與團隊協作，解決使用者痛點。對於探索如何透過機器學習與數據分析，
+                            優化醫療作業效率與患者照護質量，抱持極大的熱情，多方面為智慧醫療的發展開創更多可能性。
                         </p>
                         <p class="indented-text">
-                            通過軟體設計與技術實踐，我希望能實現以人為本的智慧醫療解決方案，縮短病患與醫療服務之間的距離，並為打造更高效、更人性化的醫療環境貢獻自己的力量。
+                            通過軟體設計與技術實踐，我希望能實現以人為本的智慧醫療解決方案，縮短病患與醫療服務之間的距離，
+                            並為打造更高效、更人性化的醫療環境貢獻自己的力量。
                         </p>
                     </div>
                 </div>
