--- a/index.html
+++ b/index.html
@@ -136,15 +136,17 @@
                     <div class="modal-body">
                         <p>1. 跨領域專業背景
                         <ul>
-                            <li> 對醫療產業的運作模式有深入的了解，熟悉醫療環境、具備醫療流程知識，讓我對需求有更好的感知。</li>
-                            <li>熟悉醫療專業術語，能有效與醫療專業人員溝通，能成為醫療與技術之間的橋樑。</li>
+                            <li><span class="advantage-title">醫療領域經驗：</span>對醫療產業的運作模式有深入的了解，熟悉醫療環境、具備醫療流程知識，讓我對醫療專案需求有更好的感知。</li>
+                            <li><span class="advantage-title">技術與使用者的橋樑：</span>熟悉醫療專業術語，能有效與醫療專業人員溝通，能成為醫療與技術之間的橋樑。</li>
                         </ul>
                         </p>
 
                         <p>2. 系統化的軟體開發能力與實踐經驗
                         <ul>
-                            <li>熟悉軟體開發生命週期（SDLC），能夠全面參與專案的各個階段，並落實每個階段的關鍵步驟。</li>
-                            <li>具備 Vue、Bootstrap、RestfulAPI 及 UI (Figma) 設計等完整開發技術，能夠獨立完成開發與維護。</li>
+                            <li><span class="advantage-title">熟悉軟體開發生命週期（SDLC）：</span>能夠全面參與專案的各個階段，並落實每個階段的關鍵步驟。</li>
+                            <li><span class="advantage-title">熟悉前端技術：</span>具備 Vue、Bootstrap、RestfulAPI 等技術，能夠獨立完成開發與提升網站效能和維護。</li>
+                            <li><span class="advantage-title"> UI/UX 設計實踐：</span>使用 Figma、Whimsical 設計介面，專注細節與一致性，確保最佳使用者體驗。</li>
+                            <li><span class="advantage-title">前後端整合經驗：</span>熟悉 RESTful API、SpringBoot、MariaDB，能與後端工程師順暢合作，確保資料流暢且安全。</li>
                         </ul>
                         </p>
 
