--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         </p>
 
                         <strong>我相信，我能為貴中心的發展帶來獨特的價值與貢獻。</strong>
-                        <p>我對人工智慧應用充滿熱忱，若貴中心有其他適合我的職位，也非常期待能有機會進一步交流或探討，探索更多合作的可能性。</p>
+                        <p>我對智慧醫療應用充滿熱忱，若貴中心有其他適合我的職位，也非常期待能有機會進一步交流或探討，探索更多合作的可能性。</p>
 
                     </div>
                 </div>
