--- a/index.html
+++ b/index.html
@@ -196,8 +196,13 @@
                             <li>Whimsical</li>
                         </ul>
                     </div>
+
                     <div class="skills-category">
-                        <h5 class="skills-category-title">前端</h5>
+                        <h5 class="skills-category-title">Programming</h5>
+                    </div>
+                    <div class="skills-category">
+                        <!-- <h5 class="skills-category-title">前端</h5> -->
+                        <h6>前端技術</h6>
                         <ul class="skills-list">
                             <li>HTML5/CSS3</li>
                             <li>Bootstrap</li>
@@ -206,20 +211,23 @@
                         </ul>
                     </div>
                     <div class="skills-category">
-                        <h5 class="skills-category-title">後端</h5>
+                        <!-- <h5 class="skills-category-title">後端</h5> -->
+                        <h6>後端技術</h6>
                         <ul class="skills-list">
                             <li>Java</li>
                             <li>SpringBoot</li>
                         </ul>
                     </div>
                     <div class="skills-category">
-                        <h5 class="skills-category-title">資料庫</h5>
+                        <!-- <h5 class="skills-category-title">資料庫</h5> -->
+                        <h6>資料庫</h6>
                         <ul class="skills-list">
                             <li>MariaDB</li>
                         </ul>
                     </div>
                     <div class="skills-category">
-                        <h5 class="skills-category-title">版本控制</h5>
+                        <!-- <h5 class="skills-category-title">版本控制</h5> -->
+                        <h6>版本控制</h6>
                         <ul class="skills-list">
                             <li>Git</li>
                         </ul>
@@ -316,8 +324,10 @@
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
+
+                                    <!-- 市民卡2.0 GitHub作品網址：https://d1204416.github.io/RentPlace_Vue_User/ -->
                                     <div class="carousel-item" data-bs-interval="2000">
-                                        <a href="https://d1204416.github.io/RentPlace_Vue_User/" target="_blank">
+                                        <a href="" target="_blank">
                                             <img src="banner/2.svg" class="d-block w-100" alt="台中市民卡2.0">
                                         </a>
                                         <div class="carousel-caption d-none d-md-block">
