--- a/index.html
+++ b/index.html
@@ -316,9 +316,10 @@
                                 </div> -->
 
                                 <div class="carousel-inner">
+
+                                    <!-- 運動中心預約網站 GitHub作品網址：https://d1204480.github.io/sport_reservation_frontend/ -->
                                     <div class="carousel-item active" data-bs-interval="10000">
-                                        <a href="https://d1204480.github.io/sport_reservation_frontend/"
-                                            target="_blank">
+                                        <a href="" target="_blank">
                                             <img src="banner/1.svg" class="d-block w-100" alt="運動中心預約網站">
                                         </a>
                                         <div class="carousel-caption d-none d-md-block">
@@ -333,13 +334,17 @@
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
+
+                                    <!-- 寵物登網站 GitHub作品網址：https://d1204416.github.io/FindLostPet/ -->
                                     <div class="carousel-item">
-                                        <a href="https://d1204416.github.io/FindLostPet/" target="_blank">
+                                        <a href="" target="_blank">
                                             <img src="banner/3.svg" class="d-block w-100" alt="作品3">
                                         </a>
                                         <div class="carousel-caption d-none d-md-block">
                                         </div>
                                     </div>
+
+                                    <!-- Canva作品網址：https://www.canva.com/design/DAGcVMDA-Po/WiQY7tlDc0sIzh5ETNZcbw/view?utm_content=DAGcVMDA-Po&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=he696e854f7 -->
                                     <div class="carousel-item">
                                         <a href="https://www.canva.com/design/DAGcVMDA-Po/WiQY7tlDc0sIzh5ETNZcbw/view?utm_content=DAGcVMDA-Po&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=he696e854f7"
                                          target="_blank">
