--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     </div>
 
                     <div class="skills-category">
-                        <h5 class="skills-category-title">Programming</h5>
+                        <h5 class="skills-category-title">程式設計</h5>
                     </div>
                     <div class="skills-category">
                         <!-- <h5 class="skills-category-title">前端</h5> -->
@@ -262,7 +262,7 @@
 
                             </div>
                             <div class="timeline-date">2023 – 2024</div>
-                            <div class="position">兒童部 研究助理</div>
+                            <div class="position">兒童部 研究助理 </div>
                             <ul class="duties">
                                 <li>負責臨床數據收集與分析，並協助建立數據平台，提高醫療研究效率。</li>
                                 <li>管理患者的治療歷史檔案，協助患者追蹤治療進展及藥物使用情況。</li>
