--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 
                             </div>
                             <div class="timeline-date">2016 - 2022</div>
-                            <div class="position">教育長</div>
+                            <div class="position">客戶成功中心領導</div>
                             <ul class="duties">
                                 <li>負責設計並推動教育方案，協調各項資源</li>
                                 <li>客戶體驗設計</li>
