--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </div>
                     <div class="skills-category">
                         <!-- <h5 class="skills-category-title">前端</h5> -->
-                        <h6>前端技術</h6>
+                        <h6 style="font-weight: bold;">Front-end</h6>
                         <ul class="skills-list">
                             <li>HTML5/CSS3</li>
                             <li>Bootstrap</li>
@@ -212,7 +212,7 @@
                     </div>
                     <div class="skills-category">
                         <!-- <h5 class="skills-category-title">後端</h5> -->
-                        <h6>後端技術</h6>
+                        <h6 style="font-weight: bold;">Back-end</h6>
                         <ul class="skills-list">
                             <li>Java</li>
                             <li>SpringBoot</li>
@@ -220,14 +220,14 @@
                     </div>
                     <div class="skills-category">
                         <!-- <h5 class="skills-category-title">資料庫</h5> -->
-                        <h6>資料庫</h6>
+                        <h6 style="font-weight: bold;">Database</h6>
                         <ul class="skills-list">
                             <li>MariaDB</li>
                         </ul>
                     </div>
                     <div class="skills-category">
                         <!-- <h5 class="skills-category-title">版本控制</h5> -->
-                        <h6>版本控制</h6>
+                        <h6 style="font-weight: bold;">Version control</h6>
                         <ul class="skills-list">
                             <li>Git</li>
                         </ul>
