--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
                             <li>Bootstrap</li>
                             <li>JavaScript</li>
                             <li>Vue</li>
+                            <li>RESTful API</li>
                         </ul>
                     </div>
                     <div class="skills-category">
