--- a/index.html
+++ b/index.html
@@ -263,11 +263,10 @@
 
                             </div>
                             <div class="timeline-date">2023 – 2024</div>
-                            <div class="position">兒童部 研究助理 </div>
+                            <div class="position">兒童部 血液病中心 個管師職務代理 </div>
                             <ul class="duties">
                                 <li>負責臨床數據收集與分析，並協助建立數據平台，提高醫療研究效率。</li>
-                                <li>管理患者的治療歷史檔案，協助患者追蹤治療進展及藥物使用情況。</li>
-                                <li>血友病患者個案管理。</li>
+                                <li>血友病患者個案管理，追蹤治療進展及藥物使用情況。</li>
                                 <li>血友病患者常規治療 ( 靜脈注射、肌肉注射、抽血等...... )。</li>
                             </ul>
                         </div>
