--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                 <div class="company">送子鳥生殖中心</div>
 
                             </div>
-                            <div class="timeline-date">2016 - 2022</div>
+                            <div class="timeline-date">2016 – 2022</div>
                             <div class="position">客戶成功中心領導</div>
                             <ul class="duties">
                                 <li>負責設計並推動教育方案，協調各項資源</li>
@@ -290,7 +290,7 @@
                             <div class="company-date">
                                 <div class="company">衛生福利部雙和醫院</div>
                             </div>
-                            <div class="timeline-date">2014- 2015</div>
+                            <div class="timeline-date">2014 – 2015</div>
                             <div class="position">神經內科病房 護理師</div>
                             <ul class="duties">
                                 <li>提供病患護理服務，與醫療團隊協作治療計畫。</li>
