--- a/index.html
+++ b/index.html
@@ -234,6 +234,15 @@
                         </ul>
                     </div>
                 </section>
+
+                <section class="section certificate-section">
+                    <h2 class="section-title-left">專業證照</h2>
+                    <ul class="certificate-list">
+                        <li>iOS APP開發證書</li>
+                        <li>醫療資訊管理師證照</li>
+                        <li>高考護理師執照</li>
+                    </ul>
+                </section>
             </div>
 
             <div class="right-column">
