--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </section>
 
                 <section class="section certificate-section">
-                    <h2 class="section-title-left">專業證照</h2>
+                    <h2 class="section-title-left section-title-left-license">專業證照</h2>
                     <ul class="certificate-list">
                         <li>iOS APP開發證書</li>
                         <li>醫療資訊管理師證照</li>
