--- a/index.html
+++ b/index.html
@@ -187,6 +187,16 @@
                     </ul>
                 </section>
 
+                <section class="section certificate-section">
+                    <h2 class="section-title-left section-title-left-license">專業證照</h2>
+                    <ul class="certificate-list">
+                        <li>iOS APP開發證書</li>
+                        <li>醫療資訊管理師證照</li>
+                        <li>高考護理師執照</li>
+                    </ul>
+                </section>
+
+
                 <section class="section skills-section">
                     <h2 class="section-title-left section-title-left-skill">技能</h2>
                     <div class="skills-category">
@@ -204,9 +214,9 @@
                         <!-- <h5 class="skills-category-title">前端</h5> -->
                         <h6 style="font-weight: bold;">Front-end</h6>
                         <ul class="skills-list">
-                            <li>HTML5/CSS3</li>
+                            <li>HTML5 / CSS3 / JavaScript</li>
                             <li>Bootstrap</li>
-                            <li>JavaScript</li>
+                            <!-- <li>JavaScript</li> -->
                             <li>Vue</li>
                             <li>RESTful API</li>
                         </ul>
@@ -215,8 +225,8 @@
                         <!-- <h5 class="skills-category-title">後端</h5> -->
                         <h6 style="font-weight: bold;">Back-end</h6>
                         <ul class="skills-list">
-                            <li>Java</li>
-                            <li>SpringBoot</li>
+                            <li>Java / SpringBoot</li>
+                            <!-- <li>SpringBoot</li> -->
                         </ul>
                     </div>
                     <div class="skills-category">
@@ -235,14 +245,7 @@
                     </div>
                 </section>
 
-                <section class="section certificate-section">
-                    <h2 class="section-title-left section-title-left-license">專業證照</h2>
-                    <ul class="certificate-list">
-                        <li>iOS APP開發證書</li>
-                        <li>醫療資訊管理師證照</li>
-                        <li>高考護理師執照</li>
-                    </ul>
-                </section>
+
             </div>
 
             <div class="right-column">
