--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
                     <ul class="certificate-list">
                         <li>醫療資訊管理師證照</li>
                         <li>iOS APP開發證書</li>
+                        <li>資訊護理師</li>
                         <li>高考護理師執照</li>
                     </ul>
                 </section>
