--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
                         <li class="email"><i class="bi bi-envelope-fill"></i> happy34she@gmail.com</li>
                         <li class="location"></i>台中市</li>
                         <li class="github">
-                            <a href="https://github.com/YourGitHub" target="_blank" rel="noopener noreferrer">
-                                <i class="bi bi-github"></i> GitHub
-                            </a>
+                            <a href="https://github.com/D1204416" target="_blank" rel="noopener noreferrer">
+                                <i class="bi bi-github"></i>  
+                            </a> GitHub
                         </li>
                     </ul>
                 </section>
