--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="陳敬家的個人履歷 - 前端工程師">
+    <meta property="og:image" content="https://www.canva.com/design/DAGdFsC-rJg/arWl03vs98mCyxBDvgQqzg/view?utm_content=DAGdFsC-rJg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hee49ecbc37">
     <title>陳敬家 - 前端工程師</title>
     <!-- <link rel="stylesheet" href="styles.css" id="light-theme"> -->
 
@@ -15,6 +16,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
